k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: kube-system
  labels:
    app.kubernetes.io/name: hello-world
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  selector:
    run: hello-world
