k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: hello-world
  namespace: kube-system
  labels:
    app.kubernetes.io/name: hello-world
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: hello-world.local
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world
              servicePort: 8080
